[FIX] web: form-view,  statusbar's caret align

--- a/addons/web/static/src/less/form_view.less
+++ b/addons/web/static/src/less/form_view.less
@@ -246,6 +246,10 @@
                         border-left-color: @gray-lighter;
                     }
                 }
+
+                .caret {
+                    margin-top: -2px;
+                }
             }
 
             .o-status-more {
